# algoping

./: .pre-commit-config.yaml  README.md  pyproject.toml  renovate.json
.github/workflows/: analytics.yaml  ci.yaml  ping.yaml
src/: algoping.py  analytics.py
src/utils/: tweet.py
