[tool.poetry]
name = "algoping"
version = "0.1.0"
description = ""
authors = ["Altynbek Orumbayev <aorumbayev@protonmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
tweepy = "^4.10.1"
py-algorand-sdk = "^1.20.2"
graphene = "^3.2.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
